<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MBUI4</string>
    <string name="chinese_simple">中文简体</string>
    <string name="english">English</string>
    <string name="Vietnamese">tiếng Việt</string>
    <string name="Chinese_traditional ">中文繁體</string>
    <string name="japan">日本語</string>
    <string name="korea">한국의</string>
    <string name="index">Desktop</string>
    <string name="apps">Apps</string>
    <string name="app_manager">Happy Life</string>
    <string name="setting">Setting</string>
    <string name="my_moonbox">MoonBox</string>
    <string name="has_to_first">Has been to the home page!</string>
    <string name="has_to_last">Has been to the end!</string>
    <string name="unstall">Uninstall</string>
    <string name="to_desktp">To desktop</string>
    <string name="cancel_to_desktp">Cancel desktop</string>
    <string name="desktop_noapp_prompt">Please choose app show here from app manager</string>
    <string name="mac">MAC:</string>
    <string name="hardware_name">Hardware:</string>
    <string name="version">Version:</string>
    <string name="message">User message:</string>
    <string name="welcome_banner">Relaxed • Inspire • healthy • Joy</string>
    <string name="soft_version">Version:</string>
    <string name="broswer">Internet</string>
    <string name="file">File</string>
    <string name="video">Video</string>
    <string name="settings">Setting</string>
    <string name="gallery">Gallery</string>
    <string name="music">Music</string>
    <string name="download">Download</string>
    <string name="appstore">Google App Store</string>
    <string name="app_not_found">The application is not found!</string>
    <string name="title_alert">Alert message</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="jiong">Desktop is full!</string>
    <string name="prompt">Prompt</string>
    <string name="update">Update</string>
    <string name="index_ad">感謝您選用MoonBox產品。 釋放 感動 健康 快樂</string>
    <string name="startdownload">start download update apk </string>
    <string name="media_center">Media Center</string>
    <string name="upgrade">Upgrade</string>
    <string name="box_setting">Box setting</string>
    <string name="google_play">Google play</string>
    <string name="france">français</string>
    <string name="pree_any_key_to_return">Press any key to return</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="disclaimer_content">\u3000\u3000MoonBox is a high-definition multimedia player network device based on Android OS(hereinafter referred to as "The device"),which is released by Wisdom International Hongkong Co.,Ltd (hereinafter referred to as "The Company").\n
			\u3000\u3000In order to get using experience by the device, you may install third-party application(s) from your own resources such as internet.the company is not responsible for any third-party applications related to the correctness, accuracy, and legitimacy of the contents. The users must abide by any applicable laws, regulations, rules or codes accepted in their respective local jurisdictions. Do not install and use any illegal contents such as pornography, violence, and application containing copyright content.\n 
			\u3000\u3000Thank you for purchasing MoonBox.Please send email(service@moonbox.hk) if you have any suggestions,it would be very helpful to improve the device.</string>
    
    <string name="agree_disclaimer">Accept</string>
    <string name="read_disclaimer">Accept</string>
	<string name="save_mac_fail">Save mac fial!</string>
	<string name="save_mac_success">Save mac success!</string>
	<string name="player_null">Please install the player, otherwise unable to play</string>
	<string name="network_not_connect">Network not connect</string>
	<string name="ready_play">Ready play</string>
	<string name="appstore2">App Store</string>
	<string name="app_position_mgr">App Location Manager</string>
		<string name="model">Model :</string>
    <string name="modelver">Build :</string>
    <string name="kernelver">Kernel :</string>
    <string name="testing">Check up :</string>
    <string name="test_start">Start</string>
    <string name="test_ing">Testing </string>
    <string name="test_sort">Icon sort</string>
    <string name="test_sort_info"></string>
     <string name="get_banner_error">Failed to load</string>
     <string name="life_info">New experience of TV shopping! All of goods are through Moonbox strict review, please be assured the purchase.</string>
     <string name="index_add">ADD APPS</string>
     <string name="add_over">Add success! Whether to make a desktop sort?</string>
</resources>