<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/page_moonbox"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="1050dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:orientation="vertical"
        android:paddingTop="50dp" >

        <LinearLayout
            android:id="@+id/main_line"
            android:layout_width="1050dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <!-- macLine -->

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/mybox_key"
                        android:layout_height="wrap_content"
                        android:text="@string/mac"
                        android:textSize="@dimen/my_box_keyandval" />

                    <TextView
                        android:id="@+id/mybox_mac"
                        style="@style/mybox_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="005551adc"
                        android:textSize="@dimen/my_box_keyandval" />
                </LinearLayout>
                <!-- versionLine -->

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/mybox_key"
                        android:layout_height="wrap_content"
                        android:text="@string/version"
                        android:textSize="@dimen/my_box_keyandval" />

                    <TextView
                        android:id="@+id/mybox_ver"
                        style="@style/mybox_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="20160311"
                        android:textSize="@dimen/my_box_keyandval" />
                </LinearLayout>
                <!-- modelLine -->

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/mybox_key"
                        android:layout_height="wrap_content"
                        android:text="@string/model"
                        android:textSize="@dimen/my_box_keyandval" />

                    <TextView
                        android:id="@+id/mybox_model"
                        style="@style/mybox_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                      
                        android:textSize="@dimen/my_box_keyandval" />
                </LinearLayout>
                <!-- modelverLine -->

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/mybox_key"
                        android:layout_height="wrap_content"
                        android:text="@string/modelver"
                        android:textSize="@dimen/my_box_keyandval" />

                    <TextView
                        android:id="@+id/mybox_modelver"
                        style="@style/mybox_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                 
                        android:textSize="@dimen/my_box_keyandval" />
                </LinearLayout>
                <!-- kernelverLine -->

                <LinearLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/mybox_key"
                        android:layout_height="wrap_content"
                        android:text="@string/kernelver"
                        android:textSize="@dimen/my_box_keyandval" />

                    <TextView
                        android:id="@+id/mybox_kernelver"
                        style="@style/mybox_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                       
                        android:textSize="@dimen/my_box_keyandval" />
                </LinearLayout>
            </LinearLayout>
            <!-- main_right -->

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                        style="@style/mybox_key"
                        android:layout_height="wrap_content"
                        android:text="IP :"
                        android:textSize="@dimen/my_box_keyandval" />

                    <TextView
                        android:id="@+id/mybox_ip"
                        style="@style/mybox_val"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                     
                        android:textSize="@dimen/my_box_keyandval" />
                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="5dp"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >

                    <TextView
                         android:layout_marginTop="10dp"
                        style="@style/mybox_key"
                        android:layout_height="wrap_content"
                        android:text="@string/testing"
                        android:textSize="@dimen/my_box_keyandval" />

                    <LinearLayout
                 
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical" >

                        <Button
                          
                            android:id="@+id/mybox_network_test"
                            android:layout_width="wrap_content"
                            android:layout_height="60dp"
                            android:background="@drawable/bg_mybox_bt"
                            android:focusable="true"
                            android:textColor="@color/text_white"
                            android:text="@string/test_start"
                            android:textSize="@dimen/my_box_keyandval" />

                        <LinearLayout
                            android:id="@+id/mybox_rightLine"
                            android:layout_width="fill_parent"
                            android:layout_height="wrap_content"
                            android:orientation="vertical" >
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <!-- usermsgline -->

        <LinearLayout
          
            android:layout_width="1050dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="28dp"
                android:layout_marginTop="10dp"
                android:text="@string/message"
                android:textColor="#C0C0C0"
                android:textSize="26dp"
                android:textStyle="bold"
                android:visibility="gone" />

            <ListView
                android:id="@id/page_moonbox_listview"
                android:layout_width="match_parent"
                android:layout_height="380dp"
                android:divider="@null"
                android:listSelector="@drawable/bg_user_msg_list" />

            <TextView
                android:id="@id/page_moonbox_msg_page"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/page_bg"
                android:gravity="center"
                android:textColor="@color/text_white"
                android:textSize="22dp" />
        </LinearLayout>
    </LinearLayout>

    <!-- OldView -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone" >

        <LinearLayout
            android:id="@id/arrow_left"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:gravity="center" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/arrow_left" />
        </LinearLayout>

        <LinearLayout
            android:id="@id/arrow_right"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:gravity="center" >

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:src="@drawable/arrow_right" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="1050dp"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:background="@drawable/moonbox_bottom_bg"
            android:orientation="horizontal"
            android:paddingBottom="20dp"
            android:paddingTop="10dp" >

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="40dp"
                    android:text="@string/mac"
                    android:textColor="@color/text_white"
                    android:textSize="22dp" />

                <TextView
                    android:id="@id/page_moonbox_mac"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_white"
                    android:textSize="22dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/hardware_name"
                    android:textColor="@color/text_white"
                    android:textSize="22dp" />

                <TextView
                    android:id="@id/page_moonbox_hardware"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_white"
                    android:textSize="22dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:gravity="right" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    android:textColor="@color/text_white"
                    android:textSize="22dp" />

                <TextView
                    android:id="@id/page_moonbox_version"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/text_white"
                    android:textSize="22dp" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>